--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,7 @@
   height: 100vh;
   display: flex;
   justify-content: center;
-  align-content: center;
+  align-items: center;
 }
 
 .image {
@@ -22,6 +22,7 @@
   cursor: pointer;
   user-select: none;
 }
+
 .left-arrow {
   position: absolute;
   top: 50%;
@@ -31,4 +32,15 @@
   z-index: 10;
   cursor: pointer;
   user-select: none;
+}
+
+.slide {
+  opacity: 0;
+  transition-duration: 1s ease;
+}
+
+.slide.active {
+  opacity: 1;
+  transition-duration: 1s;
+  transform: scale(1.08);
 }
